--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/burhanbeycan" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
           <a href="mailto:burhanbeycan@hotmail.com" class="email"><i class="bx bx-envelope"></i></a>
-          <a href="#" class="google-scholar" target="_blank"><i class="bx bxs-graduation"></i></a>
-          <a href="#" class="researchgate" target="_blank"><i class="bx bx-book-reader"></i></a>
+          <a href="https://scholar.google.com/citations?user=DbZPNyMAAAAJ&hl=en&oi=ao" class="google-scholar" target="_blank"><i class="bx bxs-graduation"></i></a>
+          <a href="https://www.researchgate.net/profile/Burhan-Beycan" class="researchgate" target="_blank"><i class="bx bx-book-reader"></i></a>
         </div>
       </div>
 
