--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Burhan Beycan</h1>
-      <p>I'm a <span class="typed" data-typed-items="Polymer Chemist, AI Researcher, Materials Scientist, Data Analyst"></span></p>
+      <h1> Dr. Burhan Beycan</h1>
+      <p>I'm a <span class="typed" data-typed-items="Polymer Chemist, AI Researcher, Materials Scientist, Computer Engineer, Data Analyst"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -91,9 +91,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>21 December 1989</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>burhanbeycan.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+90 XXX XXX XXXX</span></li>
+                  
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ankara, Türkiye</span></li>
                 </ul>
               </div>
@@ -107,7 +106,7 @@
               </div>
             </div>
             <p>
-              I am a multidisciplinary researcher possessing dual B.Sc. degrees in Computer Engineering and Chemistry, as well as both an M.Sc. and Ph.D. in Polymer Chemistry. My proficiency encompasses the design and execution of real-time deep-learning vision systems (YOLOv8, Deep SORT) and the synthesis and characterisation of sophisticated polymeric and composite materials. I have published six papers in Q1–Q2 journals and presented orally at international conferences, including the IUPAC Macro 2024 World Polymer Congress at Warwick University.
+              I am a multidisciplinary researcher possessing dual B.Sc. degrees in Computer Engineering and Chemistry, as well as both an M.Sc. and Ph.D. in Polymer Chemistry. My proficiency encompasses the design and execution of real-time deep-learning vision systems (YOLOv8, Deep SORT) and the synthesis and characterisation of sophisticated polymeric and composite materials. I have published SCI-Expanded papers in Q1–Q2 journals and presented orally at international conferences, including the IUPAC Macro 2024 World Polymer Congress at Warwick University.
             </p>
           </div>
         </div>
@@ -285,7 +284,7 @@
               <ul>
                 <li>TiS2 Production and Organolithium Exfoliation</li>
                 <li>Li-S Battery Cathodes production</li>
-                <li>Metallurgy & Material Engineering Lab research</li>
+                <li>Metallurgy & Material Engineering NanoLab (PI: Prof.Dr. H.Emrah Unalan)</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -428,6 +427,8 @@
               <p><strong>Journal:</strong> ACS Applied Polymer Materials (2025)</p>
               <p><strong>Authors:</strong> Beycan, B., Kalkan Erdoğan, M., Yangın, S., Yurdakok-Dikmen, B., Kiymaci, M., Karakışla, M.</p>
               <p><strong>Publisher:</strong> American Chemical Society (ACS)</p>
+              <p><strong>DOI:</strong> <a href="https://pubs.acs.org/doi/abs/10.1021/acsapm.5c00459" target="_blank">10.1021/acsapm.5c00459</a></p>
+
             </div>
 
             <div class="publication-item">
@@ -435,6 +436,7 @@
               <p><strong>Journal:</strong> Polymers for Advanced Technologies (2025)</p>
               <p><strong>Authors:</strong> Beycan, B., Kalkan Erdoğan, M., Yangın, S., Yurdakok-Dikmen, B., Karakışla, M.</p>
               <p><strong>Publisher:</strong> Wiley</p>
+              <p><strong>DOI:</strong> <a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pat.70174" target="_blank">10.1002/pat.70174</a></p>
             </div>
 
             <div class="publication-item">
@@ -442,6 +444,7 @@
               <p><strong>Journal:</strong> European Polymer Journal (2025)</p>
               <p><strong>Authors:</strong> Beycan, B., Kalkan Erdoğan, M., Kiymaci, M., Unal, N., Yangın, S., Yurdakok-Dikmen, B., Filazi, A., Karakışla, M., Sacak, M.</p>
               <p><strong>Publisher:</strong> Elsevier</p>
+              <p><strong>DOI:</strong> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0014305725001958" target="_blank">10.1016/j.eurpolymj.2025.113907</a></p>
             </div>
 
             <div class="publication-item">
@@ -449,6 +452,7 @@
               <p><strong>Journal:</strong> Industrial & Engineering Chemistry Research (2024)</p>
               <p><strong>Authors:</strong> Beycan, B., Erdoğan, M. K., Sancak, E., Karakışla, M., Saçak, M.</p>
               <p><strong>Publisher:</strong> American Chemical Society (ACS)</p>
+              <p><strong>DOI:</strong> <a href="https://pubs.acs.org/doi/abs/10.1021/acs.iecr.4c00759" target="_blank">10.1021/acs.iecr.4c00759</a></p>
             </div>
 
             <div class="publication-item">
