--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>35</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD in Polymer Chemistry</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD in Polymer Chemistry, BSc in Computer Engineer</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>burhanbeycan@hotmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
