--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>burhanbeycan.github.io</span></li>
-                  
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ankara, Türkiye</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>burhanbeycan@hotmail.com</span></li>
+
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD in Polymer Chemistry, BSc in Computer Engineer</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong></strong> <span>BSc in Computer Engineer</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>burhanbeycan@hotmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>PhD in Polymer Chemistry</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>       </strong> <span>BSc in Computer Engineer</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
