--- a/index.html
+++ b/index.html
@@ -396,6 +396,37 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ai">
+                      <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-materials">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/lignin-database.jpg" class="img-fluid" alt="Lignin Database">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/lignin-database.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Lignin-Ionic Liquid Database"><i class="bx bx-plus"></i></a>
+                <a href="lignin-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-materials">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/sustainable-batteries.jpg" class="img-fluid" alt="Sustainable Battery Materials">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/sustainable-batteries.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Sustainable Energy Storage"><i class="bx bx-plus"></i></a>
+                <a href="https://burhanbeycan.github.io/lignin-database-website/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/ml-optimization.jpg" class="img-fluid" alt="ML Optimization">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/ml-optimization.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Machine Learning Optimization"><i class="bx bx-plus"></i></a>
+                <a href="https://burhanbeycan.github.io/lignin-database-website/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/deep-learning.jpg" class="img-fluid" alt="Deep Learning Applications">
               <div class="portfolio-links">
