--- a/index.html
+++ b/index.html
@@ -395,8 +395,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ai">
-                      <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-materials">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-materials">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/lignin-database.jpg" class="img-fluid" alt="Lignin Database">
               <div class="portfolio-links">
@@ -438,8 +437,7 @@
 
         </div>
 
-      </div>
-    </section><!-- End Portfolio Section -->
+      </div>    </section><!-- End Portfolio Section -->
 
     <!-- ======= Publications Section ======= -->
     <section id="publications" class="publications">
