--- a/index.html
+++ b/index.html
@@ -513,6 +513,90 @@
       </div>
     </section><!-- End Publications Section -->
 
+ <!-- ======= Lectures Section ======= -->
+    <section id="lectures" class="lectures">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Lectures</h2>
+          <p>Courses I teach combining materials science with modern computational methods</p>
+        </div>
+
+        <div class="row">
+          
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="course-item">
+              <div class="course-img">
+                <img src="assets/img/courses/python-chemistry-course.jpg" class="img-fluid" alt="Python for Chemistry">
+              </div>
+              <div class="course-info">
+                <h4><a href="assets/syllabi/python-chemistry-syllabus.pdf" target="_blank">Python for Chemistry</a></h4>
+                <p><strong>Course Code:</strong> CHEM 485 | <strong>Credits:</strong> 3</p>
+                <p>Introduction to Python programming specifically tailored for chemistry applications. Students learn to use Python for chemical calculations, data analysis, molecular modeling, and laboratory data processing.</p>
+                <div class="course-details">
+                  <span class="course-duration"><i class="bi bi-clock"></i> 14 weeks</span>
+                  <span class="course-level"><i class="bi bi-bar-chart"></i> Intermediate</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="course-item">
+              <div class="course-img">
+                <img src="assets/img/courses/bigdata-materials-course.jpg" class="img-fluid" alt="Big Data for Material Science">
+              </div>
+              <div class="course-info">
+                <h4><a href="assets/syllabi/bigdata-materials-syllabus.pdf" target="_blank">Big Data for Material Science</a></h4>
+                <p><strong>Course Code:</strong> MSE 587 | <strong>Credits:</strong> 3</p>
+                <p>Explores the application of big data analytics and computational methods to materials science research. Students learn to handle large-scale materials databases and apply machine learning techniques.</p>
+                <div class="course-details">
+                  <span class="course-duration"><i class="bi bi-clock"></i> 14 weeks</span>
+                  <span class="course-level"><i class="bi bi-bar-chart"></i> Advanced</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="course-item">
+              <div class="course-img">
+                <img src="assets/img/courses/ai-materials-course.jpg" class="img-fluid" alt="AI in Material Science">
+              </div>
+              <div class="course-info">
+                <h4><a href="assets/syllabi/ai-materials-syllabus.pdf" target="_blank">AI in Material Science</a></h4>
+                <p><strong>Course Code:</strong> MSE 688 | <strong>Credits:</strong> 3</p>
+                <p>Advanced course exploring the intersection of artificial intelligence and materials science, focusing on machine learning applications for materials discovery, design, and optimization.</p>
+                <div class="course-details">
+                  <span class="course-duration"><i class="bi bi-clock"></i> 14 weeks</span>
+                  <span class="course-level"><i class="bi bi-bar-chart"></i> Graduate</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="course-item">
+              <div class="course-img">
+                <img src="assets/img/courses/datascience-informatics-course.jpg" class="img-fluid" alt="Data Science and Material Informatics">
+              </div>
+              <div class="course-info">
+                <h4><a href="assets/syllabi/datascience-informatics-syllabus.pdf" target="_blank">Data Science and Material Informatics</a></h4>
+                <p><strong>Course Code:</strong> MSE 589 | <strong>Credits:</strong> 3</p>
+                <p>Comprehensive introduction to data science methodologies applied to materials informatics. Students learn to extract insights from materials data and develop predictive models.</p>
+                <div class="course-details">
+                  <span class="course-duration"><i class="bi bi-clock"></i> 14 weeks</span>
+                  <span class="course-level"><i class="bi bi-bar-chart"></i> Advanced</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Lectures Section -->
+ 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
