--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research</span></a></li>
           <li><a href="#publications" class="nav-link scrollto"><i class="bx bx-library"></i> <span>Publications</span></a></li>
+          <li><a href="#lectures" class="nav-link scrollto"><i class="bx bx-chalkboard"></i> <span>Lectures</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
