--- a/index.html
+++ b/index.html
@@ -426,6 +426,26 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-materials">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/mxene-database.jpg" class="img-fluid" alt="MXene Functionalization Database">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/mxene-database.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MXene Functionalization Database"><i class="bx bx-plus"></i></a>
+                <a href="mxene-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-materials">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/mxene-functionalization.jpg" class="img-fluid" alt="MXene Surface Functionalization">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/mxene-functionalization.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MXene Surface Functionalization Process"><i class="bx bx-plus"></i></a>
+                <a href="https://burhanbeycan.github.io/Mxene-database/" target="_blank" title="Live Database"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-ai">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/deep-learning.jpg" class="img-fluid" alt="Deep Learning Applications">
