--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
               <img src="assets/img/portfolio/deep-learning.jpg" class="img-fluid" alt="Deep Learning Applications">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/deep-learning.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Deep Learning for Materials Science"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://burhanbeycan.github.io/Mxene-database/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
