--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@
               <li data-filter=".filter-polymer">Polymer Chemistry</li>
               <li data-filter=".filter-ai">AI & Machine Learning</li>
               <li data-filter=".filter-materials">Materials Science</li>
+              <li data-filter=".filter-biomedical">Biomedical</li>
             </ul>
           </div>
         </div>
