--- a/index.html
+++ b/index.html
@@ -457,6 +457,36 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-biomedical">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/glycopolymer-ml-platform.jpg" class="img-fluid" alt="Glycopolymer ML Platform">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/glycopolymer-ml-platform.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Glycopolymer-Lectin ML Platform"><i class="bx bx-plus"></i></a>
+                <a href="glycopolymer-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-materials filter-biomedical">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/glycopolymer-synthesis.jpg" class="img-fluid" alt="Smart Glycopolymer Design">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/glycopolymer-synthesis.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Stimuli-Responsive Glycopolymer Synthesis"><i class="bx bx-plus"></i></a>
+                <a href="https://burhanbeycan.github.io/glycopolymer-ml-platform/" target="_blank" title="Live Platform"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-biomedical">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/lectin-binding-analysis.jpg" class="img-fluid" alt="Lectin Binding Analysis">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/lectin-binding-analysis.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML-Guided Lectin Binding Analysis"><i class="bx bx-plus"></i></a>
+                <a href="https://burhanbeycan.github.io/glycopolymer-ml-platform/" target="_blank" title="Live Platform"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
         </div>
 
       </div>    </section><!-- End Portfolio Section -->
