--- a/index.html
+++ b/index.html
@@ -486,6 +486,36 @@
               </div>
             </div>
           </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-materials">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pva-electrospinning-predictor.jpg" class="img-fluid" alt="PVA Electrospinning Predictor">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pva-electrospinning-predictor.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="PVA Electrospinning ML Predictor"><i class="bx bx-plus"></i></a>
+                <a href="pva-electrospinning-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-materials filter-biomedical">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/electrospinning-process.jpg" class="img-fluid" alt="Nanofiber Process Optimization">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/electrospinning-process.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Electrospinning Process Control"><i class="bx bx-plus"></i></a>
+                <a href="https://burhanbeycan.github.io/pva-electrospinning-predictor/" target="_blank" title="Live Platform"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-biomedical">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/nanofiber-applications.jpg" class="img-fluid" alt="Biomedical Scaffold Design">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/nanofiber-applications.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML-Guided Biomedical Scaffold Design"><i class="bx bx-plus"></i></a>
+                <a href="https://burhanbeycan.github.io/pva-electrospinning-predictor/" target="_blank" title="Live Platform"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
           
         </div>
 
