--- a/index.html
+++ b/index.html
@@ -516,6 +516,26 @@
               </div>
             </div>
           </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-materials">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/agnw-synthesis-lab.jpg" class="img-fluid" alt="Autonomous AgNW Synthesis Lab">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/agnw-synthesis-lab.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Autonomous AgNW Synthesis Lab"><i class="bx bx-plus"></i></a>
+                <a href="agnw-synthesis-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ai filter-materials">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/perovskite-ml-platform.jpg" class="img-fluid" alt="PerovskiteLab ML Platform">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/perovskite-ml-platform.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="PerovskiteLab ML-Driven Synthesis Platform"><i class="bx bx-plus"></i></a>
+                <a href="perovskite-lab-portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
           
         </div>
 
