perovskite-lab-portfolio-details.html

--- a/perovskite-lab-portfolio-details.html
+++ b/perovskite-lab-portfolio-details.html
@@ -17,12 +17,11 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/swiper@8/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -38,20 +37,19 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.jpg" alt="Burhan Beycan" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Burhan Beycan</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/burhanbeycan" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="mailto:burhanbeycan@hotmail.com" class="email"><i class="bx bx-envelope"></i></a>
+          <a href="#" class="google-scholar" target="_blank"><i class="bx bxs-graduation"></i></a>
+          <a href="#" class="researchgate" target="_blank"><i class="bx bx-book-reader"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="index.html#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Research</span></a></li>
@@ -105,12 +103,9 @@
               <ul>
                 <li><strong>Category</strong>: AI & Materials Science</li>
                 <li><strong>Total Experiments</strong>: 147 Completed</li>
-                <li><strong>Campaign Progress</strong>: 73.5% of 200 Target</li>
-                <li><strong>Average Quality Score</strong>: 0.782 (Tier 1)</li>
-                <li><strong>High-Quality Candidates</strong>: 42 Samples</li>
-                <li><strong>Best Quality</strong>: 0.975 (EXP_104)</li>
-                <li><strong>Applications</strong>: Solar Cells, LEDs, Photodetectors</li>
-                <li><strong>Platform URL</strong>: <a href="https://burhanbeycan.github.io/perovskite-lab/" target="_blank">Live Platform</a></li>
+                <li><strong>Duration</strong>: 2023 - 2024</li>
+                <li><strong>Institution</strong>: Ankara University</li>
+                <li><strong>Status</strong>: Active Development</li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -119,7 +114,9 @@
                 This cutting-edge platform represents a paradigm shift in perovskite materials discovery through autonomous machine learning-driven synthesis and optimization. The system has successfully completed 147 experiments with continuous quality improvement and intelligent parameter selection.
               </p>
               <p>
-                The platform addresses critical challenges in perovskite optimization by providing systematic exploration of composition-property relationships with unprecedented efficiency and reproducibility.
+                <a href="https://burhanbeycan.github.io/perovskite-lab/" target="_blank" class="btn btn-primary">
+                  <i class="bx bx-link-external"></i> Live Platform
+                </a>
               </p>
             </div>
           </div>
@@ -151,34 +148,14 @@
                 The autonomous platform incorporates comprehensive real-time monitoring with live status updates showing current synthesis activities including 3 active synthesis experiments and 2 characterization processes. The system maintains continuous quality assessment with real-time feedback enabling dynamic parameter adjustment based on intermediate results. Advanced process control ensures reproducible synthesis conditions while enabling systematic exploration of parameter space for optimal materials discovery.
               </p>
 
-              <h3>Machine Learning Integration and Predictive Modeling</h3>
-              <p>
-                The platform employs advanced machine learning algorithms trained on the extensive experimental database to predict optimal synthesis parameters for target properties. The system continuously learns from experimental outcomes, improving parameter selection accuracy and reducing the number of experiments required to identify high-performance compositions. Predictive modeling capabilities enable intelligent experiment design, focusing synthesis efforts on the most promising regions of composition-property space.
-              </p>
-
               <h3>Applications in Next-Generation Optoelectronics</h3>
               <p>
                 The optimized perovskite materials find critical applications in high-efficiency solar cells, where the combination of high quality scores and excellent crystallinity directly translates to superior photovoltaic performance. Light-emitting diode applications benefit from the precise composition control and quality optimization, enabling tunable emission properties and enhanced device stability. Photodetector applications leverage the exceptional crystallinity and quality metrics to achieve high sensitivity and fast response times across diverse spectral ranges.
               </p>
 
-              <h3>Systematic Materials Discovery Methodology</h3>
+              <h3>Machine Learning Integration and Predictive Modeling</h3>
               <p>
-                The platform employs a systematic approach to materials discovery through intelligent experiment design and comprehensive characterization protocols. Each experiment is carefully designed based on machine learning predictions and historical performance data, ensuring efficient exploration of composition-property relationships. The systematic methodology enables identification of structure-property correlations and development of predictive models for rational materials design.
-              </p>
-
-              <h3>Quality Assurance and Reproducibility</h3>
-              <p>
-                The autonomous platform incorporates rigorous quality assurance protocols with standardized synthesis procedures and comprehensive characterization methods. Reproducibility is ensured through precise control of synthesis parameters and automated data collection, minimizing human error and batch-to-batch variability. The system maintains detailed records of all experimental conditions and outcomes, enabling systematic analysis of process-property relationships and continuous improvement of synthesis protocols.
-              </p>
-
-              <h3>Scalability and Industrial Translation</h3>
-              <p>
-                The platform is designed for seamless scalability from laboratory research to industrial production, with standardized protocols and automated quality control systems. The machine learning algorithms can be adapted to larger-scale synthesis equipment while maintaining the same level of quality control and optimization capability. Industrial translation is facilitated through comprehensive documentation of optimal synthesis conditions and quality metrics for high-performing compositions.
-              </p>
-
-              <h3>Future Developments and Platform Evolution</h3>
-              <p>
-                Ongoing platform development includes expansion to additional perovskite compositions beyond FA-Cs systems, integration of advanced characterization techniques for comprehensive property assessment, and development of multi-scale optimization algorithms. Future enhancements will include real-time device performance testing, automated post-processing protocols, and integration with device fabrication systems for complete materials-to-device optimization workflows.
+                The platform employs advanced machine learning algorithms trained on the extensive experimental database to predict optimal synthesis parameters for target properties. The system continuously learns from experimental outcomes, improving parameter selection accuracy and reducing the number of experiments required to identify high-performance compositions. Predictive modeling capabilities enable intelligent experiment design, focusing synthesis efforts on the most promising regions of composition-property space.
               </p>
             </div>
           </div>
@@ -201,14 +178,9 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/glightbox/dist/js/glightbox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
