--- a/agnw-synthesis-portfolio-details.html
+++ b/agnw-synthesis-portfolio-details.html
@@ -17,12 +17,11 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/swiper@8/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -38,20 +37,19 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.jpg" alt="Burhan Beycan" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Burhan Beycan</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/burhanbeycan" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="mailto:burhanbeycan@hotmail.com" class="email"><i class="bx bx-envelope"></i></a>
+          <a href="#" class="google-scholar" target="_blank"><i class="bx bxs-graduation"></i></a>
+          <a href="#" class="researchgate" target="_blank"><i class="bx bx-book-reader"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="index.html#portfolio" class="nav-link scrollto active"><i class="bx bx-book-content"></i> <span>Research</span></a></li>
@@ -105,12 +103,9 @@
               <ul>
                 <li><strong>Category</strong>: AI & Materials Science</li>
                 <li><strong>Synthesis Method</strong>: Polyol Process</li>
-                <li><strong>Control Parameters</strong>: 4 Reagents + 3 Process Variables</li>
-                <li><strong>Temperature Range</strong>: Up to 160°C</li>
-                <li><strong>Characterization</strong>: UV-Vis + NIR Spectroscopy</li>
-                <li><strong>Diameter Estimation</strong>: ~110 nm (λ_max = 480 nm)</li>
-                <li><strong>Applications</strong>: Transparent Electrodes</li>
-                <li><strong>Platform URL</strong>: <a href="https://burhanbeycan.github.io/agnw-synthesis/" target="_blank">Live Lab</a></li>
+                <li><strong>Duration</strong>: 2023 - 2024</li>
+                <li><strong>Institution</strong>: Ankara University</li>
+                <li><strong>Status</strong>: Active Development</li>
               </ul>
             </div>
             <div class="portfolio-description">
@@ -119,7 +114,9 @@
                 This autonomous laboratory system represents a breakthrough in silver nanowire synthesis through intelligent process control and real-time characterization. The platform integrates polyol synthesis with advanced spectroscopic monitoring to achieve precise control over nanowire morphology and quality.
               </p>
               <p>
-                The system addresses critical challenges in transparent electrode manufacturing by providing reproducible, high-quality silver nanowires with controlled aspect ratios and optical properties.
+                <a href="https://burhanbeycan.github.io/agnw-synthesis/" target="_blank" class="btn btn-primary">
+                  <i class="bx bx-link-external"></i> Live Platform
+                </a>
               </p>
             </div>
           </div>
@@ -151,34 +148,14 @@
                 Advanced NIR spectroscopy from 940-1550 nm enables detailed analysis of nanowire surface chemistry and stabilizer binding. The system detects PVP binding through characteristic absorption at 1450 nm, providing critical information about surface functionalization and stability. This real-time analysis ensures optimal stabilizer coverage while minimizing excess PVP that could impact electrical conductivity in final applications.
               </p>
 
-              <h3>Autonomous Quality Control and Safety Systems</h3>
-              <p>
-                The platform incorporates comprehensive safety and quality control systems with real-time monitoring of critical parameters. Temperature monitoring with safety interlocks prevents overheating and ensures operator safety, while pressure monitoring detects potential system failures. Emergency stop functionality provides immediate process termination capability, while automated pump status monitoring ensures reliable reagent delivery throughout the synthesis process.
-              </p>
-
-              <h3>Machine Learning Integration and Process Optimization</h3>
-              <p>
-                The system employs advanced machine learning algorithms for autonomous process optimization and quality prediction. Historical experiment data enables predictive modeling of nanowire properties based on synthesis parameters, while real-time spectroscopic data provides feedback for dynamic process adjustment. The AI optimization module continuously learns from synthesis outcomes, improving parameter selection and reducing batch-to-batch variability.
-              </p>
-
               <h3>Applications in Transparent Electronics</h3>
               <p>
                 The synthesized silver nanowires find critical applications in next-generation transparent conductive electrodes for flexible electronics, touch screens, and solar cells. The controlled aspect ratio and diameter distribution achieved through this autonomous system enable optimization of electrical conductivity while maintaining high optical transparency. The platform addresses the growing demand for indium-free transparent electrodes in sustainable electronics manufacturing.
               </p>
 
-              <h3>Process Scalability and Industrial Integration</h3>
+              <h3>Machine Learning Integration and Process Optimization</h3>
               <p>
-                The autonomous control system is designed for seamless scalability from laboratory to industrial production scales. Standardized protocols and automated parameter optimization enable consistent quality across different batch sizes, while real-time monitoring ensures process reliability in manufacturing environments. The platform's modular design facilitates integration with existing production infrastructure and quality control systems.
-              </p>
-
-              <h3>Environmental and Economic Benefits</h3>
-              <p>
-                The autonomous synthesis platform significantly reduces material waste through optimized reagent usage and improved batch success rates. Real-time monitoring minimizes failed syntheses, while AI-driven optimization reduces energy consumption through efficient temperature and time management. The system contributes to sustainable nanomaterial production by eliminating the need for indium-based transparent conductors.
-              </p>
-
-              <h3>Future Developments and Platform Evolution</h3>
-              <p>
-                Ongoing platform development includes integration of additional characterization techniques such as dynamic light scattering for size distribution analysis and electrical conductivity measurements for direct performance assessment. Advanced features under development include multi-objective optimization for simultaneous control of conductivity and transparency, automated post-processing protocols, and integration with downstream device fabrication systems for complete transparent electrode manufacturing.
+                The system employs advanced machine learning algorithms for autonomous process optimization and quality prediction. Historical experiment data enables predictive modeling of nanowire properties based on synthesis parameters, while real-time spectroscopic data provides feedback for dynamic process adjustment. The AI optimization module continuously learns from synthesis outcomes, improving parameter selection and reducing batch-to-batch variability.
               </p>
             </div>
           </div>
@@ -201,14 +178,9 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/glightbox/dist/js/glightbox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
