agnw-synthesis-portfolio-details.html

--- a/agnw-synthesis-portfolio-details.html
+++ b/agnw-synthesis-portfolio-details.html
@@ -103,8 +103,8 @@
               <ul>
                 <li><strong>Category</strong>: AI & Materials Science</li>
                 <li><strong>Synthesis Method</strong>: Polyol Process</li>
-                <li><strong>Duration</strong>: 2023 - 2024</li>
-                <li><strong>Institution</strong>: Ankara University</li>
+                <li><strong>Duration</strong>: 2025 - current</li>
+                <li><strong>Institution</strong>: Middle East Technical University</li>
                 <li><strong>Status</strong>: Active Development</li>
               </ul>
             </div>
